--- a/go/docker-compose.yaml
+++ b/go/docker-compose.yaml
@@ -1,12 +1,12 @@
 version: "3"
 services:
   zookeeper:
-    image: confluentinc/cp-zookeeper:latest
+    image: confluentinc/cp-zookeeper:latest # 7.3.0
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
 
   kafka:
-    image: confluentinc/cp-kafka:latest
+    image: confluentinc/cp-kafka:latest # 7.3.0
     depends_on:
       - zookeeper
     ports:
@@ -22,10 +22,11 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,OUTSIDE:PLAINTEXT
     extra_hosts:
       #- "host.docker.internal:172.17.0.1"
-      - "host.docker.internal:192.168.1.8"
+      #- "host.docker.internal:192.168.1.8"
+      - "host.docker.internal:host-gateway"
 
   control-center:
-    image: confluentinc/cp-enterprise-control-center:latest
+    image: confluentinc/cp-enterprise-control-center:latest # 7.3.0
     hostname: control-center
     depends_on:
       - kafka
