--- a/nestjs/docker-compose.yaml
+++ b/nestjs/docker-compose.yaml
@@ -1,16 +1,17 @@
 version: '3'
 
 services:
-  app:
-    build: . # Build a partir do Dockerfile
-    ports:
-      - 3000:3000
-      - 5555:5555
-    volumes:
-      - .:/home/node/app
-    extra_hosts:
-      - "host.docker.internal:172.17.0.1"
-      # não use docker desktop (linux) ou (windows)
+  # app:
+  #   build: . # Build a partir do Dockerfile
+  #   ports:
+  #     - 3000:3000
+  #     - 5555:5555
+  #   volumes:
+  #     - .:/home/node/app
+  #   extra_hosts:
+  #     #- "host.docker.internal:172.17.0.1"
+  #     - "host.docker.internal:host-gateway"
+  #     # não use docker desktop (linux) ou (windows)
 
   db:
     image: bitnami/mongodb:5.0.17
@@ -21,6 +22,9 @@ services:
       MONGODB_REPLICA_SET_MODE: primary
       MONGODB_REPLICA_SET_KEY: 123456
       MONGODB_DATABASE: nest
+    ports: 
+      - 27017:27017
+      
 
 volumes:
   mongodb_data:
