chore: change docker compose, replace mongo with postgrees

--- a/go/docker-compose.yaml
+++ b/go/docker-compose.yaml
@@ -21,9 +21,9 @@ services:
       KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka:9092,OUTSIDE://host.docker.internal:9094
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,OUTSIDE:PLAINTEXT
     extra_hosts:
-      #- "host.docker.internal:172.17.0.1"
+      - "host.docker.internal:172.17.0.1"
       #- "host.docker.internal:192.168.1.8"
-      - "host.docker.internal:host-gateway"
+      #- "host.docker.internal:host-gateway"
 
   control-center:
     image: confluentinc/cp-enterprise-control-center:latest # 7.3.0
