--- a/nestjs/.env
+++ b/nestjs/.env
@@ -4,4 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb://root:root@db:27017/nest?authSource=admin"
+# DATABASE_URL="mongodb://root:root@db:27017/nest?authSource=admin"
+
+DATABASE_URL="postgresql://admin:admin@localhost:5432/nestjs?schema=public"
