--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -25,8 +25,10 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^10.3.1",
     "@nestjs/platform-express": "^10.0.0",
-    "@prisma/client": "^5.9.0",
+    "@prisma/adapter-pg": "^5.10.0",
+    "@prisma/client": "^5.9.1",
     "kafkajs": "^2.2.4",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -45,6 +47,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
+    "prisma": "^5.9.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
