--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -15,7 +15,8 @@
     "lightweight-charts": "^4.1.3",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
